# rag-blueprint-vespa

./: NOTES.md  RAG_BLUEPRINT_ANALYSIS.md  README.md  USAGE.md  main.py  pyproject.toml
app/: app.ipynb  main.py
app/models/: lightgbm_model.json
app/profiles/: __init__.py  base_features_profile.py  collect_second_phase_profile.py  collect_training_data_profile.py  learned_linear_profile.py  match_only_profile.py  second_with_gbdt_profile.py
app/schemas/: __init__.py  doc.py  doc.sd
app/search/: __init__.py
app/search/query_profiles/: __init__.py  deepresearch.py  deepresearch_with_gbdt.py  hybrid.py  hybrid_with_gbdt.py  rag.py  rag_with_gbdt.py
app/services/: __init__.py  services.py
hybrid_search/: main.py  query_examples.md
langchain_streaming_mode/: README.md  main.py  requirements.txt
layered_chunking/: HYBRID_VS_LAYERED_COMPARISON.md  OBSERVATIONS.md  QUICKSTART.md  RANKING_EVALUATION_GUIDE.md  RANKING_PROFILES_GUIDE.md  RANKING_QUICK_REFERENCE.md  README.md  RETRIEVER_CONVERSION_GUIDE.md  evaluate_rankings.py  hybrid.json  layered_ranking.json  layered_retriever.py  main.py  retriever_comparison.py  simple_layered_retriever.py
layered_ranking_demo/: QUICKSTART.md  README.md  main.py  requirements.txt
streaming_mode_vespa/: main.py
streaming_mode_vespa/.claude/: settings.local.json
