[project]
name = "rag-blueprint-vespa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.3.0",
    "fastapi[standard]>=0.120.2",
    "ipykernel>=7.0.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "lightgbm>=4.6.0",
    "llama-index>=0.12.52",
    "loguru>=0.7.3",
    "openai",
    "pandas>=2.3.0",
    "pydantic>=2.12.3",
    "pypdf>=5.1.0",
    "langchain-text-splitters>=0.3.4",
    "pyvespa>=0.62.0",
    "requests>=2.32.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.1.2",
]
